# PA_2025_codes

./: README.md
PA_heir_code/: BUILD  alban_pipeline.sh
PA_heir_code/add/: Cargo.toml  README.alban  add.mlir  add.rs  add_main.rs  rust_script.sh
PA_heir_code/age_verification/: age_verification.mlir  age_verification_decrypt.cpp  age_verification_encrypt.cpp  age_verification_init.cpp  age_verification_main.cpp  heir_output.cpp  heir_output.h  output.mlir
PA_heir_code/age_verification_2/: age_verification_2.mlir  age_verification_decrypt_2.cpp  age_verification_encrypt_2.cpp  age_verification_init_2.cpp  age_verification_main_2.cpp  heir_output_2.cpp  heir_output_2.h  output_2.mlir
PA_heir_code/av/: Cargo.toml  README.alban  av.mlir  av.mlir.premache  av.rs  av_main.rs  output.mlir  rust_script.sh
PA_heir_code/cmux/: Cargo.toml  README.alban  cmux.mlir  cmux.rs  cmux_main.rs  output.mlir  rust_script.sh
PA_heir_code/dot_product/: dot_product_main.cpp
PA_heir_code/hash/: Cargo.toml  README.alban  hash.mlir  hash_main.rs  lonesha256.inlined.mlir  output.mlir  rust_script.sh
PA_polygeist_code/: alban_script.sh  diff  diff.cpp  diff.h  diff.inlined.mlir  diff.mlir  lonesha256.c  lonesha256.inlined.mlir  lonesha256.mlir  main.cpp  test_main.cpp
