[package]
name = "heir-tfhe-rust-alban"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
tfhe = { version = "0.5.3", features = ["shortint", "x86_64-unix"] }

[[bin]]
name = "add_main"
path = "/home/nut/Documents/PA_doc/heir/alban_pa/add/add_main.rs"


